--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: objective-c
-osx_image: xcode7.2
+osx_image: xcode8
 xcode_workspace: NetworkActivityIndicatorManager.xcworkspace
 xcode_scheme: NetworkActivityIndicatorManager
-xcode_sdk: iphonesimulator9.2
+xcode_sdk: iphonesimulator9.3
 script:
-    - carthage bootstrap --platform iOS
-    - xctool -workspace NetworkActivityIndicatorManager.xcworkspace -scheme NetworkActivityIndicatorManager -sdk iphonesimulator9.2 -destination 'platform=iOS Simulator,name=iPhone 6s' ONLY_ACTIVE_ARCH=NO clean test
+    - gem install xcpretty
+    - carthage bootstrap --platform iOS --use-submodules
+    - xcodebuild -workspace NetworkActivityIndicatorManager.xcworkspace -scheme NetworkActivityIndicatorManager -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6s,OS=10.0' ONLY_ACTIVE_ARCH=NO clean test | xcpretty
