--- a/NetworkActivityIndicatorManager.xcodeproj/xcshareddata/xcschemes/NetworkActivityIndicatorManager-Package.xcscheme
+++ b/NetworkActivityIndicatorManager.xcodeproj/xcshareddata/xcschemes/NetworkActivityIndicatorManager-Package.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0720"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D4ACC0AF1C5E2CFE00396328"
+               BlueprintIdentifier = "NetworkActivityIndicatorManager::NetworkActivityIndicatorManager"
                BuildableName = "NetworkActivityIndicatorManager.framework"
                BlueprintName = "NetworkActivityIndicatorManager"
                ReferencedContainer = "container:NetworkActivityIndicatorManager.xcodeproj">
@@ -32,24 +32,13 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D4ACC0B91C5E2CFE00396328"
+               BlueprintIdentifier = "NetworkActivityIndicatorManager::NetworkActivityIndicatorManagerTests"
                BuildableName = "NetworkActivityIndicatorManagerTests.xctest"
                BlueprintName = "NetworkActivityIndicatorManagerTests"
                ReferencedContainer = "container:NetworkActivityIndicatorManager.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D4ACC0AF1C5E2CFE00396328"
-            BuildableName = "NetworkActivityIndicatorManager.framework"
-            BlueprintName = "NetworkActivityIndicatorManager"
-            ReferencedContainer = "container:NetworkActivityIndicatorManager.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -61,17 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D4ACC0AF1C5E2CFE00396328"
-            BuildableName = "NetworkActivityIndicatorManager.framework"
-            BlueprintName = "NetworkActivityIndicatorManager"
-            ReferencedContainer = "container:NetworkActivityIndicatorManager.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -79,15 +57,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D4ACC0AF1C5E2CFE00396328"
-            BuildableName = "NetworkActivityIndicatorManager.framework"
-            BlueprintName = "NetworkActivityIndicatorManager"
-            ReferencedContainer = "container:NetworkActivityIndicatorManager.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
