--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,36 @@
-## OS X Finder
 .DS_Store
+/.build
+/Packages
+/*.xcodeproj
+xcuserdata/
 
-## Build generated
-build/
-DerivedData
+.idea
 
-## Various settings
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
+# Created by https://www.toptal.com/developers/gitignore/api/fastlane
+# Edit at https://www.toptal.com/developers/gitignore?templates=fastlane
 
-## Other
-*.xccheckout
-*.moved-aside
-*.xcuserstate
-*.xcscmblueprint
+### fastlane ###
+# fastlane - A streamlined workflow tool for Cocoa deployment
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/#source-control
 
-## Obj-C/Swift specific
-*.hmap
-*.ipa
+# fastlane specific
+fastlane/report.xml
 
-# Swift Package Manager
-.build/
+# deliver temporary files
+fastlane/Preview.html
 
-# Carthage
-Carthage/Build
+# snapshot generated screenshots
+fastlane/screenshots/**/*.png
+fastlane/screenshots/screenshots.html
 
-# AppCode 
-.idea/
+# scan temporary files
+fastlane/test_output
+
+# Fastlane.swift runner binary
+fastlane/FastlaneRunner
+
+# End of https://www.toptal.com/developers/gitignore/api/fastlane
